<resources>
    <string name="app_name">CTSSystem</string>
    <string name="app_description">Informations about Android</string>
    <string name="app_version">Versão: 1.0.0</string>
    <string name="app_author">Eros Vitor Bornatowski</string>
    <string name="app_author_contact">erosborna@gmail.com</string>

    <string name="menu_main_about">About</string>

    <string name="screen_main_tab_device">Device</string>
    <string name="screen_main_tab_system">System</string>
    <string name="screen_main_tab_network">Network</string>

    <string name="tab_device_fld_device">Device:</string>
    <string name="tab_device_fld_brand">Brand:</string>
    <string name="tab_device_fld_model">Model:</string>
    <string name="tab_device_fld_cpu">CPU:</string>

    <string name="tab_system_fld_apilevel">API:</string>
    <string name="tab_system_fld_version">Version:</string>

    <string name="tab_network_fld_networktype">Network:</string>
    <string name="tab_network_fld_ipv4_address">IP v4:</string>
    <string name="tab_network_fld_ipv6_address">IP v6:</string>
    <string name="tab_network_fld_mac_address">MAC:</string>
    <string name="tab_network_fld_bluetooth">Bluetooth:</string>
    <string name="tab_network_fld_wifi">WiFi:</string>

    <string name="screen_about_title">About</string>
    <string name="screen_about_logo_description"></string>

</resources>